// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BottomBarItem > should render the component as HTMLAnchorElement with active state 1`] = `
<DocumentFragment>
  <a
    aria-current="page"
    class="mocked-styled-3 el-anchor-bottom-bar-item-container"
    href="#"
  >
    <div
      class="mocked-styled-0 el-bottom-bar-item-icon"
      role="presentation"
    >
      <span>
        icon
      </span>
    </div>
    <span
      class="mocked-styled-1 el-bottom-bar-item-label"
    >
      Label
    </span>
  </a>
</DocumentFragment>
`;

exports[`BottomBarItem > should render the component as HTMLAnchorElement with default state 1`] = `
<DocumentFragment>
  <a
    class="mocked-styled-3 el-anchor-bottom-bar-item-container"
    href="#"
  >
    <div
      class="mocked-styled-0 el-bottom-bar-item-icon"
      role="presentation"
    >
      <span>
        icon
      </span>
    </div>
    <span
      class="mocked-styled-1 el-bottom-bar-item-label"
    >
      Label
    </span>
  </a>
</DocumentFragment>
`;

exports[`BottomBarItem > should render the component as HTMLButtonElement with active state 1`] = `
<DocumentFragment>
  <button
    aria-current="true"
    class="mocked-styled-4 el-button-bottom-bar-item-container"
  >
    <div
      class="mocked-styled-0 el-bottom-bar-item-icon"
      role="presentation"
    >
      <span>
        icon
      </span>
    </div>
    <span
      class="mocked-styled-1 el-bottom-bar-item-label"
    >
      Label
    </span>
  </button>
</DocumentFragment>
`;

exports[`BottomBarItem > should render the component as HTMLButtonElement with badge state 1`] = `
<DocumentFragment>
  <button
    aria-current="true"
    class="mocked-styled-4 el-button-bottom-bar-item-container"
  >
    <div
      class="mocked-styled-0 el-bottom-bar-item-icon"
      role="presentation"
    >
      <span>
        icon
      </span>
    </div>
    <span
      class="mocked-styled-1 el-bottom-bar-item-label"
    >
      Label
    </span>
    <span
      class="mocked-styled-2 el-bottom-bar-item-badge"
    />
  </button>
</DocumentFragment>
`;

exports[`BottomBarItem > should render the component as HTMLButtonElement with default state 1`] = `
<DocumentFragment>
  <button
    aria-current="true"
    class="mocked-styled-4 el-button-bottom-bar-item-container"
  >
    <div
      class="mocked-styled-0 el-bottom-bar-item-icon"
      role="presentation"
    >
      <span>
        icon
      </span>
    </div>
    <span
      class="mocked-styled-1 el-bottom-bar-item-label"
    >
      Label
    </span>
  </button>
</DocumentFragment>
`;
